[project]
name = "latent-sde-mocap"
version = "0.0.1"
description = "PyTorch implementation of Latent SDE for motion capture data generation, based on Li et al.'s AISTATS 2020 paper"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Naoki Kiyohara" }
]
keywords = ["deep-learning", "motion-capture", "sde", "pytorch"]
dependencies = [
    "beartype>=0.19.0",
    "fire>=0.7.0",
    "jaxtyping>=0.2.37",
    "loguru>=0.7.3",
    "numpy>=2.2.2",
    "scipy>=1.15.1",
    "setuptools>=75.8.0",
    "torch>=2.5.1",
    "torchdiffeq>=0.2.5",
    "torchsde>=0.2.6",
    "tqdm>=4.67.1",
    "wandb>=0.19.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pre-commit>=4.1.0",
]
